--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.less
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.less
@@ -24,6 +24,7 @@
         grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
         grid-gap: 10px;
         grid-auto-flow: dense;
+        margin-top: 20px;
     }
 
     .sw-product-image.is--cover {
