--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.scss
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.scss
@@ -6,6 +6,9 @@ $sw-media-quickinfo-multiple-color-danger: $color-crimson;
 $sw-media-quickinfo-multiple-color-divider: $color-steam-cloud;
 
 .sw-media-quickinfo-multiple {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
     .sw-media-quickinfo-multiple__collapse {
        padding-bottom: 25px;
