--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
@@ -1,42 +1,44 @@
 {% block sw_media_sidebar %}
     <div class="sw-media-sidebar">
+        <h3 class="sw-media-sidebar__headline">{{ headLine }}</h3>
         {% block sw_media_sidebar_item_quickinfo_content %}
-            <div class="sw-media-sidebar__quickinfo-wrapper">
-                <sw-media-quickinfo
-                    v-if="isSingleFile"
-                    :item="items[0]"
-                    @sw-media-quickinfo-open-modal-replace="openModalReplace"
-                    @sw-media-quickinfo-open-modal-delete="openModalDelete"
-                    @sw-media-quickinfo-open-folder-settings="openFolderSettings"
-                    @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
-                    @sw-media-quickinfo-open-folder-move="openModalMove">
-                </sw-media-quickinfo>
 
-                <sw-media-quickinfo-multiple
-                    v-else-if="isMultipleFile"
-                    :items="items"
-                    @sw-media-quickinfo-open-modal-delete="openModalDelete"
-                    @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
-                    @sw-media-quickinfo-open-folder-move="openModalMove">
-                </sw-media-quickinfo-multiple>
 
-                <sw-media-quickinfo v-else-if="currentFolder"
-                    :item="currentFolder"
-                    @sw-media-quickinfo-open-modal-replace="openModalReplace"
-                    @sw-media-quickinfo-open-modal-delete="openModalDelete"
-                    @sw-media-quickinfo-open-folder-settings="openFolderSettings"
-                    @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
-                    @sw-media-quickinfo-open-folder-move="openModalMove">>
-                </sw-media-quickinfo>
-                <div v-else> TODO: Illustration keine Medien sobald verfügbar...</div>
+        <div class="sw-media-sidebar__quickinfo-scroll-container">
+            <sw-media-quickinfo
+                v-if="isSingleFile"
+                :item="firstEntity"
+                @sw-media-quickinfo-open-modal-replace="openModalReplace"
+                @sw-media-quickinfo-open-modal-delete="openModalDelete"
+                @sw-media-quickinfo-open-folder-settings="openFolderSettings"
+                @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
+                @sw-media-quickinfo-open-folder-move="openModalMove">
+            </sw-media-quickinfo>
 
-            </div>
+            <sw-media-quickinfo-multiple
+                v-else-if="isMultipleFile"
+                :items="items"
+                @sw-media-quickinfo-open-modal-delete="openModalDelete"
+                @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
+                @sw-media-quickinfo-open-folder-move="openModalMove">
+            </sw-media-quickinfo-multiple>
+
+            <sw-media-quickinfo v-else-if="currentFolder"
+                :item="currentFolder"
+                @sw-media-quickinfo-open-modal-replace="openModalReplace"
+                @sw-media-quickinfo-open-modal-delete="openModalDelete"
+                @sw-media-quickinfo-open-folder-settings="openFolderSettings"
+                @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
+                @sw-media-quickinfo-open-folder-move="openModalMove">>
+            </sw-media-quickinfo>
+            <div v-else> TODO: Illustration keine Medien sobald verfügbar...</div>
+        </div>
         {% endblock %}
 
         {% block sw_media_sidebar_modal_replace %}
             <sw-media-modal-replace
                 v-if="isSingleFile && showModalReplace"
-                :itemToReplace="items[0]"
+                :itemToReplace="firstEntity"
                 @sw-media-modal-replace-close="closeModalReplace">
             </sw-media-modal-replace>
         {% endblock %}
@@ -53,7 +55,7 @@
         {% block sw_media_sidebar_folder_settings_modal %}
             <sw-media-modal-folder-settings
                     v-if="showFolderSettings"
-                    :folder="items[0]"
+                    :folder="firstEntity"
                     @sw-media-modal-folder-settings-save="closeFolderSettings"
                     @sw-media-modal-folder-settings-close="closeFolderSettings">
             </sw-media-modal-folder-settings>
