--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.less
@@ -1,17 +1,25 @@
 @import "~less/variables";
+@import "~less/mixins";
 
-@sw-media-sidebar-z-index:  @z-index-sidebar;
+@sw-media-sidebar-z-index:        @z-index-sidebar;
+@sw-media-sidebar-color-headline: @color-gutenberg;
 
 .sw-media-sidebar {
-    position: relative;
     height: 100%;
     width: 400px;
-    overflow-y: auto;
     border-left: 1px solid @color-steam-cloud;
 
-    .sw-media-sidebar__quickinfo-wrapper {
-        position: absolute;
+    .sw-media-sidebar__headline {
+        .truncate();
+        margin: 25px;
+        font-size: 18px;
+        color: @sw-media-sidebar-color-headline;
+    }
+
+    .sw-media-sidebar__quickinfo-scroll-container {
+        position: relative;
         width: 100%;
         height: 100%;
+        overflow-y: auto;
     }
 }
