--- a/Resources/administration/src/app/component/context-menu/sw-context-menu-item/sw-context-menu-item.scss
+++ b/Resources/administration/src/app/component/context-menu/sw-context-menu-item/sw-context-menu-item.scss
@@ -1,11 +1,11 @@
 @import '~scss/variables';
 
 $sw-context-menu-color-background-hover: lighten($color-shopware-blue, 40%);
-$sw-context-menu-color-text: $color-gutenberg;
-$sw-context-menu-color-active: $color-shopware-blue;
-$sw-context-menu-color-danger: $color-crimson;
-$sw-context-menu-color-success: $color-emerald;
-$sw-context-menu-color-warning: $color-pumpkin-spice;
+$sw-context-menu-color-text:             $color-gutenberg;
+$sw-context-menu-color-active:           $color-shopware-blue;
+$sw-context-menu-color-danger:           $color-crimson;
+$sw-context-menu-color-success:          $color-emerald;
+$sw-context-menu-color-warning:          $color-pumpkin-spice;
 
 .sw-context-menu-item {
     display: block;
@@ -81,6 +81,16 @@ $sw-context-menu-color-warning: $color-pumpkin-spice;
             &.is--disabled {
                 color: $sw-context-menu-color-warning;
             }
+        }
+    }
+
+    &.sw-context-menu-item--headline {
+        text-align: center;
+        cursor: default;
+
+        &:hover {
+            color: $sw-context-menu-color-text;
+            background: 0 none;
         }
     }
 
