--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.scss
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.scss
@@ -1,5 +1,8 @@
+@import "~scss/mixins";
+
 .sw-settings-snippet-list {
     .content__column-translationKey {
+        @include truncate();
         text-align: left;
         margin-left: 10px;
         color: rgba(0, 0, 0, 0.3);
