--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
@@ -41,7 +41,7 @@
                                     {% block sw_settings_snippet_set_list_card_list_container_header %}
                                         <div class="sw-settings-snippet-set-list__actions">
                                             {% block sw_settings_snippet_set_list_card_list_container_header_btn_export %}
-                                                <sw-button size="small" variant="ghost" disabled>
+                                                <sw-button v-if="false" size="small" variant="ghost" disabled>
                                                     {{ $tc('sw-settings-snippet.setList.buttonExport') }}
                                                 </sw-button>
                                             {% endblock %}
@@ -55,10 +55,53 @@
                                                 </sw-button>
                                             {% endblock %}
 
-                                            {% block sw_settings_snippet_set_list_card_list_container_header_btn_add_set %}
-                                                <sw-button class="sw-settings-snippet-set-list__action-add" size="small" @click="onAddSnippetSet" variant="ghost">
-                                                    {{ $tc('sw-settings-snippet.setList.buttonAddSet') }}
-                                                </sw-button>
+                                            {% block sw_settings_snippet_set_list_card_list_container_header_btn_split %}
+                                                <sw-button-group class="sw-settings-snippet-set-list__action-split"
+                                                                 splitButton>
+                                                    {% block sw_settings_snippet_set_list_card_list_container_header_btn_add_set %}
+                                                        <sw-button class="sw-settings-snippet-set-list__action-add"
+                                                                   size="small"
+                                                                   variant="ghost"
+                                                                   @click="onAddSnippetSet">
+                                                            {{ $tc('sw-settings-snippet.setList.buttonAddSet') }}
+                                                        </sw-button>
+                                                    {% endblock %}
+
+                                                    {% block sw_settings_snippet_set_list_card_list_btn_copy_split %}
+                                                        <sw-context-button headline="hi">
+
+                                                            {% block sw_settings_snippet_set_list_card_btn_copy %}
+                                                                <sw-button slot="button"
+                                                                           class="sw-settings-snippet-set-list__action-context-menu"
+                                                                           size="small"
+                                                                           variant="ghost"
+                                                                           square>
+                                                                    {% block sw_settings_snippet_set_list_card_btn_copy_icon %}
+                                                                        <sw-icon name="small-arrow-medium-down" size="16"></sw-icon>
+                                                                    {% endblock %}
+                                                                </sw-button>
+                                                            {% endblock %}
+
+                                                            {% block sw_settings_snippet_set_list_card_copy_context_menu %}
+                                                                <sw-context-menu-item variant="headline">
+                                                                    {{ $tc('sw-settings-snippet.setList.splitButtonDuplicateContent') }}
+                                                                </sw-context-menu-item>
+                                                            {% endblock %}
+
+                                                            {% block sw_settings_snippet_set_list_card_copy_context_divider %}
+                                                                <sw-context-menu-divider></sw-context-menu-divider>
+                                                            {% endblock %}
+
+                                                            {% block sw_settings_snippet_set_list_card_copy_context_menu_items %}
+                                                                <sw-context-menu-item v-for="set in snippetSets"
+                                                                                      :key="set.id"
+                                                                                      @click="onClone(set.id)">
+                                                                    {{ set.name }}
+                                                                </sw-context-menu-item>
+                                                            {% endblock %}
+                                                        </sw-context-button>
+                                                    {% endblock %}
+                                                </sw-button-group>
                                             {% endblock %}
                                         </div>
                                     {% endblock %}
@@ -81,17 +124,25 @@
                                 {% block sw_settings_snippet_set_list_card_list_grid_template %}
                                     <template slot="columns" slot-scope="{ item }">
                                         {% block sw_settings_snippet_set_list_card_list_grid_column_name %}
-                                            <sw-grid-column flex="1fr"
+                                            <sw-grid-column flex="minmax(200px, 1fr)"
                                                             class="sw-settings-snippet-set__column-name"
                                                             :label="$tc('sw-settings-snippet.setList.columnName')"
                                                             dataIndex="name"
                                                             editable
+                                                            truncate
                                                             sortable>
-                                                {{ item.name }}
+
+                                                {% block sw_settings_snippet_set_list_card_list_grid_column_name_link %}
+                                                    <router-link :to="{ name: 'sw.settings.snippet.list', query: { ids: [item.id] } }">
+                                                        {{ item.name }}
+                                                    </router-link>
+                                                {% endblock %}
+
                                                 {% block sw_settings_snippet_set_list_card_list_grid_column_name_editor %}
                                                     <sw-field type="text"
                                                               v-model="item.name"
                                                               slot="inline-edit"
+                                                              :placeholder="$tc('sw-settings-snippet.setList.placeholderName')"
                                                               ref="nameEditor">
                                                     </sw-field>
                                                 {% endblock %}
@@ -113,13 +164,22 @@
                                         {% endblock %}
 
                                         {% block sw_settings_snippet_set_list_card_list_grid_column_base_file %}
-                                            <sw-grid-column flex="1fr"
+                                            <sw-grid-column flex="minmax(200px, 1fr)"
                                                             class="sw-settings-snippet-set-file__column-base-file"
                                                             sortable
                                                             :label="$tc('sw-settings-snippet.setList.columnBaseFile')"
                                                             dataIndex="baseFile"
+                                                            truncate
                                                             sortable>
                                                 {{ item.baseFile }}
+
+                                                {% block sw_settings_snippet_set_list_card_list_grid_column_base_file_editor %}
+                                                    <sw-field type="select" slot="inline-edit" v-model="item.baseFile">
+                                                        <option v-for="file in baseFiles" :value="file.name">
+                                                            {{ file.name }}
+                                                        </option>
+                                                    </sw-field>
+                                                {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
 
@@ -128,8 +188,7 @@
                                                 {% block sw_settings_snippet_set_list_card_list_grid_column_base_action_buttons %}
                                                     <sw-context-button>
                                                         {% block sw_settings_snippet_set_list_card_list_grid_column_base_action_btn_edit %}
-                                                            <sw-context-menu-item v-if="false"
-                                                                    :routerLink="{ name: 'sw.settings.snippet.list', params: { ids: [item.id] } }">
+                                                            <sw-context-menu-item :routerLink="{ name: 'sw.settings.snippet.list', query: { ids: [item.id] } }">
                                                                 {{ $tc('sw-settings-snippet.setList.contextMenuEdit') }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
