--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.scss
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.scss
@@ -4,12 +4,13 @@
         flex-wrap: wrap;
 
         .sw-button {
-            &:not(:last-child) {
+            &:not(.sw-settings-snippet-set-list__action-add) {
                 margin-right: 8px;
             }
-
-            &.sw-settings-snippet-set-list__action-add {
-               margin-left: auto;
+        }
+        .sw-button-group {
+            &.sw-settings-snippet-set-list__action-split {
+                margin-left: auto;
             }
         }
     }
