NEXT-1549 - Add new multicolor icons, fix typo

--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -16,7 +16,7 @@
                     {% block sw_media_folder_parent_icon%}
                         <sw-icon slot="sw-media-item-preview"
                                  v-if="isParent"
-                                 name="folder-breadcums-parent"
+                                 name="folder-thumbnail-back"
                                  size="90%"
                                  class="sw-media-folder-item__folder-thumbnails"
                                  multicolor>
