NEXT-1456 - Fix media-upload item positioning and switch classname

--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -44,7 +44,7 @@
                         {% endblock %}
 
                         {% block sw_media_upload_regular_header_switch %}
-                            <a class="sw-media-upload__switch" @click="toggleShowUrlFields">
+                            <a class="sw-media-upload__switch-mode" @click="toggleShowUrlFields">
                                 {{ toggleButtonCaption }}
                             </a>
                         {% endblock %}
