NEXT-1456 - Change multi-upload layout to using grid

--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.less
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.less
@@ -48,10 +48,10 @@
         position: relative;
 
         &.is--multi {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            grid-template-columns: unset;
+            grid-template-rows: unset;
+            justify-items: center;
+            padding: 36px 24px;
 
             .sw-media-upload__actions {
                 margin-top: 12px;
